--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,49 @@
 html, body {
     margin: 0;
     padding: 0;
- /* Prevent scrolling while fixing the gradient issue */
+    background-image: 
+    linear-gradient(to bottom, 
+    #131313,
+    #412943  );
+    background-attachment: fixed;
 }
 
+.navigation, .nav_links, .nav_links li {
+    margin: 0;
+    padding: 0;
+}
+.nav_links{
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+    background-color: #181517;
+    height: 2.4rem;
+    transition: text-decoration 0.3s ease, color 0.3s ease, background-color 0.3s ease;  /* Adjust the 0.3s to your desired duration */
+}
+
+.nav_links a {
+    float: left;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #E0E0E0;
+    transition: color 0.3s ease, background 0.3s ease;
+}
+.nav_links a:hover {
+    color: #FFF;  /* Changes color on hover, for example to white */
+    background: radial-gradient( #5b4f57 10%, #181517 50%);
+}
 /* TITLE */
 .title {
     color: #E0E0E0;
     font-family: gloock;
     height: 100vh; 
-    background-image: linear-gradient(#131313, #2D0D30);
     display: flex; /* Use flexbox */
     flex-direction: column; /* Arrange items vertically */
     justify-content: center; /* Center items vertically */
@@ -61,15 +95,15 @@ html, body {
 
 /********ABOUT ME ****************/
 .about_me{
-    background-image: linear-gradient(#2D0D30, #4B1650);
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-around;
+    padding-top: 2rem; 
 }
 .about_me_content{
     color: #E0E0E0;
     margin: 50px;
-    font-size: 2em;
+    font-size: 1.7rem;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     align-self: center;
@@ -81,7 +115,9 @@ html, body {
     margin-right: 120px; 
     color: #E0E0E0;
 }
-
+.section-content {
+    padding-top: 50px; 
+}
 
 /* SKILLS */
 .subheader{
@@ -93,7 +129,7 @@ html, body {
     align-self: center;
 }
 .skills_section{
-    background-image: linear-gradient(#4B1650, #962CA0);
+    padding-top: 60px; 
 } 
 .skill{
     color: #E0E0E0;
@@ -107,23 +143,188 @@ html, body {
     display: flex;
     justify-content: center;
 }
-
 .skills_column{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     margin-left: 50px;
     margin-right: 50px;
-
 }
+
 .projects{
-    background-image: linear-gradient(#962CA0, #CF6FD8);
+    padding-top: 60px; 
 
 }
-.expirence_section{
+.proj_title{
+    color: #E0E0E0;
+    font-size: 3rem;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.proj_title::after {
+    content: "";
+    display: block;
+    width: 20%;
+    height: 2px;
+    background-color: #E0E0E0;
+    margin: 0.5rem auto
+}
+
+.proj_paragraph{
+    color: #E0E0E0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3rem;
+
+}
+
+.bb_img, .gallery_img {
+    opacity: 0;
+    transition: opacity .6s ease-out; /* This will create a smooth fading effect */
+}
+
+.bb_txt_container{
+    flex: 1;
+    align-self: center;
+    text-align: center;
+    margin-right: 2rem;
+}
+
+.proj_container {
+    text-align: center; /* Center the text horizontally */
+    display: flex; 
+    justify-content: space-between;
+}
+
+
+
+.bb_img_container{
+    display: flex;
+    margin-bottom: 5%;
+    flex: 1; 
+    transition: opacity 0.5s ease; /* Smooth opacity transition */
+
+}
+.bb_img {
+    display: block; /* Make the image a block-level element to center it */
+    height: 30em;
+    border-radius: 10px;
+    margin-top: 2%; 
+    margin-left: 8%; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+#bb_img_2 {
+    display: block; /* Make the image a block-level element to center it */
+    height: 30em;
+    border-radius: 10px;
+    margin-top: 3rem; 
+    margin-left: 4%; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+.gallery_img {
+    height: 16em;
+    margin-top: 2%; 
+    margin-right: 9rem; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+    max-width: 90%;
+
+}
+.gallery_img_container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 5%;
+    margin-left: 2rem;
+}
+#gallery_img_2{
+    margin-left: 5rem;
+    margin-right: 0rem;
+}
+.gallery_txt_container{
+    flex: 1;
+    align-self: center;
+    text-align: center;
+    margin-left: 2rem;
+}
+.port_img_container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 5%;
+    margin-left: 2rem;
+}
+.port_txt_container{
+    flex: 1;
+    align-self: center;
+    text-align: center;
+    margin-left: 2rem;
+}
+
+.exerience_section{
+    padding-top: 9000px;
+
+}
+.resume_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }  
+.contact_section{
+    margin-top: 6rem;
+    padding-top: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+    background-color: #2A1C2C;
 
+}
+.footer_title{
+    text-align: center;
+    font-size: 3em;
+    margin-right: 120px; 
+    margin-left: 120px;
+    color: #E0E0E0;
+    align-self: center;
 
+}
+.footer_links{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    justify-content: center;
+}
+.footer_links li{
+    text-align: center;
+    text-decoration: none;
+    padding: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #E0E0E0;
+}
+.footer_links a{
+    text-align: center;
+    text-decoration: none;
+    padding: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #E0E0E0;
+    transition: text-decoration 0.3s ease, color 0.3s ease, background-color 0.3s ease;  /* Adjust the 0.3s to your desired duration */
 
+}
+.footer_links a:hover {
+    text-decoration: underline;  /* Adds underline back on hover */
+    color: #FFF;  /* Changes color on hover, for example to white */
+    background-color: #170f18;
+    border-radius: 10%;
+}
+/* Other gradient possibility:     #131313,
+    #2D0D30,
+    #4B1650, 
+    #962CA0,
+    #CF6FD8,
+    #962CA0,
+    #4B1650, 
+    #2D0D30,
+    #131313 */
+
+@max-width
 
