--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    margin: 0;
+    margin: 0rem;
     padding: 0;
     background-image: 
     linear-gradient(to bottom, 
@@ -8,6 +8,7 @@ html, body {
     background-attachment: fixed;
     overflow-x: hidden;
 }
+
 
 .navigation, .nav_links, .nav_links li {
     margin: 0;
@@ -41,6 +42,8 @@ html, body {
 }
 /* TITLE */
 .title {
+    margin-left: 1rem;
+    margin-right: 1rem;
     color: #E0E0E0;
     font-family: gloock;
     height: 100vh; 
@@ -51,7 +54,7 @@ html, body {
 }
 .title_txt{
     text-align: center;
-    font-size: 8em;
+    font-size: 9em;
     margin-right: 120px; 
     margin-left: 120px;
     margin-bottom: 30px; 
@@ -125,13 +128,13 @@ html, body {
 .subheader{
     text-align: center;
     font-size: 6em;
-    margin-right: 120px; 
-    margin-left: 120px;
     color: #E0E0E0;
     align-self: center;
 }
 .skills_section{
     padding-top: 60px; 
+    margin-right: 2rem;
+    margin-left: 2rem;
 } 
 .skill{
     color: #E0E0E0;
@@ -157,6 +160,8 @@ html, body {
 /******** Projects ****************/
 .projects{
     padding-top: 60px; 
+    margin-right: 2rem;
+    margin-left: 2rem;
 }
 .proj_title{
     color: #E0E0E0;
@@ -268,9 +273,27 @@ html, body {
 }
 .resume_container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }  
+.resume_download{
+    margin-top: .7em;
+    font-size: 1em;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    align-self: center;
+    text-decoration: underline;
+}
+.resume_download a {
+    color: #E0E0E0; 
+    text-decoration: underline;
+}
+.resume_download a:hover {
+    background-color: #5b4f57;
+    padding: 5px;
+    border-radius: 10%;
+}
 
 /******** Contact ****************/
 .contact_section{
@@ -313,8 +336,9 @@ html, body {
 }
 .footer_links a:hover {
     text-decoration: underline;  
-    background-color: #170f18;
+    background-color: #5b4f57;
     border-radius: 10%;
+    padding: 3px;
 }
 
 @media (max-width: 1200px) {
@@ -393,6 +417,8 @@ html, body {
     }
     .skills_section{
         padding-top: 60px; 
+        margin-left: 120px; 
+        margin-right: 120px; 
     } 
     .skill{
         font-size: 1.4em;
@@ -407,6 +433,8 @@ html, body {
     }
     
     /******** Projects ****************/
+    .projects{
+    }
     .proj_title{
         font-size: 2rem;
     }
@@ -420,6 +448,7 @@ html, body {
     .proj_container {
         display: flex; 
         flex-direction: column;
+        justify-content: center;
     }
     #proj_container_mobile{
         flex-direction: column-reverse;
@@ -466,19 +495,21 @@ html, body {
     
     /******** Contact ****************/
     .footer_title{
-        font-size: 2.5em;
+        font-size: 2.4em;
         margin-right: 0px; 
-        margin-left: 30px;
+        margin-left: 0px;
         align-self: center;
 
     }
     .footer_links li{
         padding: 6px;
-        margin-right: 12px; 
-        margin-left: 12px;
+        margin-right: 3px; 
+        margin-left: 3px;
     }
     .footer_links a{
         text-align: center;
+        padding: 0px;
+
         text-decoration: none;
 
     }
@@ -557,6 +588,8 @@ html, body {
     
     /********ABOUT ME ****************/
     .about_me{
+        margin-left: 30px;
+        margin-right: 30px;
         flex-direction: column; 
         justify-content: center; 
         align-items: center;  
@@ -604,17 +637,30 @@ html, body {
     }
     .bb_txt_container{
         margin-left: 2rem;
+        width: 100%;
     }
     .proj_container {
         display: flex; 
         flex-direction: column;
+        align-items: center;
+
+    }
+    #bb_title_mobile{
+        margin-right: 3rem;
+    }
+    #bb_paragraph_mobile{
+        margin-right: 3rem;
     }
     #proj_container_mobile{
         flex-direction: column-reverse;
     }
     
     .mobile_img_container{
-        justify-content: center;
+        justify-self: center;
+        align-self: center;
+        margin-right: 2.5rem;
+        margin-top: 1rem;
+
     }
     .mobile_img {
         height: 23em;
@@ -625,6 +671,7 @@ html, body {
     .web_img_container{
         align-items: center;
         justify-content: center;
+        margin-left: 4rem;
     }
 
     #web_img_2{
